--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -114,6 +114,10 @@
   height: 60px;
   width: 60px;
 }
+.cartimg{
+  height: 30px;
+  width: 30px;
+}
 
 @media screen and (max-width: 500px) {
 .navbar{
@@ -140,6 +144,9 @@
   .navbar-link2{
     display: block;
     margin-left: 20px;
+    position: absolute;
+    top: 31px;
+    right: 60px;
   }
 
   .navbar-item{
@@ -163,9 +170,23 @@
   }
   
   .logoimg {
-    height: 60px;
-    width: 60px;
+    height:40px;
+    width: 40px;
+    position: relative;
+    top:13px;
   } 
+
+  .logotxt{
+    font-size: 18px !important;
+    position: relative;
+    top:13px;
+  }
+
+  .cartimg{
+    height: 50px;
+    width: 20px;
+  }
+ 
   .dropdown-menu{
     height: 300px;
     margin: 0px 0px;
@@ -206,13 +227,13 @@
 
   .toggle-button {
     position: absolute;
-    top: 20px;
-    right: 10px;
+    top: 23px;
+    right: 2%;
     height: 40px;
     width: 40px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #555555;
-    background-color: none;
+    background-color: white;
     /* border: 2px solid black; */
     /* outline: none; */
     /* cursor: pointer; */
