--- a/src/components/Pages/Homepage/Homescreen.css
+++ b/src/components/Pages/Homepage/Homescreen.css
@@ -594,6 +594,10 @@
     font-size: 20px;
     font-weight: 700;
 }
+/* ------------------------------------------- */
+
+
+
 
 @media screen and (max-width: 500px) {
     .home{
