--- a/src/components/Pages/Homepage/Homescreen.css
+++ b/src/components/Pages/Homepage/Homescreen.css
@@ -167,6 +167,20 @@
     margin-bottom: 40px;
     font-size: 23px;
 }
+.mobcard2h2{
+    text-align: center;
+    position: relative;
+    /* top:32px; */
+    margin-top: 30px;
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    word-spacing:inherit;
+    letter-spacing: 5px;
+    /* color: gray; */
+    /* bottom: 20px; */
+    margin-bottom: 0px;
+    font-size: 23px;
+}
 .card2div1{
     height: 97%;
     width: 39%;
@@ -296,8 +310,9 @@
 }
 
 .card4{
-    height: 131vh;
+   
     margin: auto;
+    overflow: hidden;
     /* background-color: rgb(183, 78, 34); */
 }
     /* background: url("./Rectangle12.png") no-repeat center center/cover; */
@@ -342,16 +357,20 @@
 .upcard4{
     height: 50%;
     margin-bottom: 16px;
-    width: 100%;
+    width: 105%;
     display: flex;
     justify-content: center;
+    position: relative;
+    right: 40px;
     /* background-color: aqua; */
 }
 .downcard4{
     height: 50%;
-    width: 100%;
+    width: 105%;
     display: flex;
     justify-content: center;
+    position: relative;
+    right: 40px;
     /* background-color: rgba(48, 16, 143, 0.527); */
 }
 .onecard4{
@@ -416,10 +435,10 @@
     font-family: 'Inter', sans-serif;;
     font-weight: 500;
     /* margin-bottom: 4%; */
-    letter-spacing: 3px;
+    letter-spacing: 6px;
     position: absolute;
-    top: 80%;
-    left: 3%;
+    bottom: 7%;
+    left: 3.5%;
     transform: translate(4%, -221%);
     font-size: 20px;
     color: #FFFFFF;
@@ -428,23 +447,37 @@
     border: none;
     font-family: 'Inter', sans-serif;;
     position: absolute;
-    top: 80%;
+    bottom: 0%;
     left: 3%;
     width: 200px;
-    font-size:16px;
+  
     transform: translate(5%, -52%);
-    font-size: 12px;
+    font-size: 13px;
     text-transform: uppercase;
     letter-spacing: 2px;
     background-color: #000000;
     color: #FFFFFF;
-    height: 45px;
+    height: 38px;
     width: 185px;
+}
+
+.card4{
+    height: 125vh !important;
+}
+.card4 h3{
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 0px;
+    letter-spacing: 4px;
+    font-family: 'Inter', sans-serif;;
+    font-size: 25px;
+    font-weight: 600;
+    /* margin: 20px 20px; */
 }
 .card5{
     height: 96vh;
     width: 100%;
-    background-color: #edebeb;
+    background-color: #f4f4f4;
 }
 .card5-container{
     height: 600px;
@@ -598,9 +631,9 @@
     font-family: 'Inter', sans-serif;
     line-height: 1.7;
     letter-spacing: 1px;
-    color: #4E4E4E;
+    color: black;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 500;
 }
 /* ------------------------------------------- */
 
@@ -724,6 +757,9 @@
         height: 100%;
         justify-content: center;
         width: 100%;
+        position: relative;
+    right: 4px;
+    bottom: 18px;
     }
     .insidecard2inside h2{
         display: none;
@@ -763,7 +799,7 @@
         margin: 0px 0px;
     }
     .card4{
-        height: 1789px; 
+        height: 205vh !important;
     }
     .upcard4{
         flex-direction: column;
@@ -775,6 +811,8 @@
         height: 100%;
         justify-content: center;
         width: 100%;
+        position: relative;
+    right: 3px;
     }
     .cardimgp h2{
         font-size: 18px;
@@ -793,16 +831,20 @@
     }
     .btn-card4{
         position: absolute;
-  top: 80%;
+  
   left: 3%;
   width: 200px;
-  font-size:16px;
+  font-size:13px;
   transform: translate(0, -50%);
     }
     .card5 h3{
-        font-size: 17px;
+        padding-top: 17px;
+        font-size:18px;
         color: black;
-        font-weight: 900
+        font-weight: 500;
+        letter-spacing: 6px;
+        background-color: white;
+        height:70px;
     }
     .card4card{
 
@@ -915,18 +957,35 @@
     }
     .onecard5img1{
         /* width: 10%; */
-        height: 80%;
-        width: 100%;
+        height: 100%;
+        width: 108%;
+        
     }
     .card5{
-        height: 545px;
+        height: 77vh;
         /* height: 560px; */
+    }
+    .card5h2{
+        font-weight: 600 !important;
+        letter-spacing: 3px !important;
+    }
+    .card5h6{
+        font-weight: 400 !important;
+        letter-spacing: 3px !important;
     }
     .card6{
         height:auto;
     }
     .card6h2{
         font-size: 18px;
+        padding-top: 27px;
+        font-size:18px;
+        color: black;
+        font-weight: 500;
+        letter-spacing: 6px;
+        background-color: white;
+        height:40px;
+        margin-top: 10px;
     }
     .card3{
         /* display: none; */
@@ -936,14 +995,24 @@
         flex-direction: column;
     }
     .h2card4{
-    width: 67%;
+    width: 90%;
     /* background-color: aqua; */
     position: absolute;
-    top: 80%;
+    
     left: 3%;
     transform: translate(-8%, -221%);
     text-align: center;
     /* font-size: 20px; */
+    font-family: 'Inter', sans-serif;;
+    font-weight: 500;
+    /* margin-bottom: 4%; */
+    letter-spacing: 6px;
+    position: absolute;
+    
+    left: -10.5%;
+    transform: translate(4%, -221%);
+    font-size: 20px;
+    color: #FFFFFF;
     }
     .card6one{
         width: 100%;
