--- a/src/components/Pages/Homepage/Homescreen.css
+++ b/src/components/Pages/Homepage/Homescreen.css
@@ -223,27 +223,70 @@
     text-align: center;
     /* margin: 30% 15%; */
     line-height: 1.5;
+    font-size: 16px;
+    color: aliceblue;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 400;
 }
 .insidecard2inside h2{
     font-size: 35px;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 300;
+    font-size: 25px;
+    color: aliceblue;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 400;
+}
+.insidecard2inside h3{
+    font-size: 35px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 20px;
+    color: aliceblue;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 400;
 }
 .insidecard2inside p {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 24px;
+    font-size: 18px;
+    color: aliceblue;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    margin-top: 40px;
+    font-family: 'Inter';
+    font-weight: 300;
+
 }
 .card2-btn{
     height: 40px;
     width: 255px;
-    background-color: #f1ecec;
+    background-color: white;
     color: #0b0a0a;
     text-transform: uppercase;
     border: none;
     font-size: 21px;
     font-family: 'Inter';
+    font-size: 16px;
+  
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin-top: 30px;
+    font-family: 'Inter';
+    font-weight: 400;
+    
 }
 .card2div3up{
     height: 47%;
