--- a/src/components/Pages/Homepage/cart.css
+++ b/src/components/Pages/Homepage/cart.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 
 .cart-container1 {
     width: 100%;
@@ -13,6 +13,13 @@
     font-size: 26px;
     /* font-family: 'Inter', sans-serif; */
     font-family: 'Heebo';
+    font-size: 25px;
+  
+    letter-spacing: 0px;
+    text-transform: capitalize;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 700;
   }
 
   .rtbtn{
@@ -22,7 +29,14 @@
     border: none;
     font-size: 20px;
     background-color: #000000;
-    color: #ccc;
+    color: white;
+    font-size: 13px;
+
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    margin-top: 20px;
+    font-family: 'Inter';
+    font-weight: 400;
   }
 
   .slider{
@@ -37,8 +51,17 @@
 
 .hd{
   /* margin: 20px 10px; */
-  margin-bottom: 30px;
-  font-size: 30px;
+  margin-bottom:60px;
+  font-size: 25px;
+  
+   
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  margin-top: 55px;
+  font-family: 'Inter';
+  font-weight: 560;
+  position: relative;
+  right: 40px;
 }
 
 .card1{
@@ -55,6 +78,8 @@
 .card1 img{
   height: 130px;
   width: 130px;
+  position: relative;
+  right: 30px;
 }
 .all{
   height: 93px;
@@ -72,13 +97,44 @@
   /* background-color: #f74a4a; */
 }
 .one2{
-  margin-left: 17px;
+  margin-left: 55px;
   margin-top: 10px;
   /* background-color: #000000; */
   width: 70%;
   font-family: 'Inter', sans-serif;
   font-size: 20px;
 }
+.one2 h3{
+  font-size: 17px;
+   
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 700;
+
+}
+.one2 p{
+  font-size: 17px;
+   
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 400;
+
+}
+.one2 h4{
+  font-size: 17px;
+   
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-family: 'Inter';
+    font-weight: 700;
+
+}
+
 .two{
   height: 100%;
   width: 33%;
@@ -93,6 +149,53 @@
   margin: 40px;
   text-align: end;
   font-size: 25px;
+  font-size: 17px;
+   
+  letter-spacing: 0px;
+  text-transform: uppercase;
+  margin-top: 55px;
+  font-family: 'Inter';
+  font-weight: 460;
+}
+.chk h3{
+
+  font-size: 17px;
+   
+  letter-spacing: 0px;
+  text-transform: uppercase;
+  margin-top: 40px;
+  font-family: 'Inter';
+  font-weight: 460;
+  position: relative;
+  left: 100px;
+
+}
+
+.chk p{
+  font-size: 17px;
+   
+  letter-spacing: 0px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  font-family: 'Inter';
+  font-weight: 460;
+  position: relative;
+  left: 100px;
+
+}
+
+.chbtn{
+  position: relative;
+  left: 100px;
+  font-size: 16px !important;
+   
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin-top: 0px;
+  font-family: 'Inter';
+  font-weight: 300;
+
 }
 span{
   color: rgb(82, 78, 78);
@@ -103,7 +206,7 @@ span{
   align-items: center;
   width: 130px;
   height: 50px;
-  margin: 30px 50px;
+  margin: 45px 50px;
   justify-content:center;
   border: 2px solid #ccc;
   /* padding: 10px; */
@@ -261,7 +364,7 @@ span{
   display: flex;
 }
 .items{
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -269,8 +372,9 @@ span{
   align-items: center;
 }
 .cartimg{
-  height: 30vh;
-  width: 30vh;
+  height: 10vh !important;
+  width: 10vh !important;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 500px) {
